--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -31,7 +31,7 @@
 
             <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}" autoValidate></paper-input>
 
-            <paper-button disabled$="[[!_computeFormReady(user.currentPassword, user.newPassword, user.confirmNewPassword)]]" raised on-tap="_submitForm">Submit</paper-button>
+            <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
           </iron-form>
         </template>
 
@@ -43,6 +43,8 @@
         </template>
       </div>
     </paper-card>
+
+    <iron-ajax id="ajax" url="/account" method="POST" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
   </template>
 
   <script>
@@ -63,20 +65,44 @@
               hasPass: null
             },
             notify: true
+          },
+          sendingData: {
+            type: Boolean,
+            value: false
+          },
+          formReady: {
+            type: Boolean,
+            computed: '_computeFormReady(user.currentPassword, user.newPassword, user.confirmNewPassword, sendingData)'
           }
         },
         ready: function() {
           this.set('user.email', EMAIL);
           this.set('user.hasPass', HAS_PASS);
         },
-        _computeFormReady: function(currentPassword, newPassword, confirmNewPassword) {
-          return currentPassword && newPassword && confirmNewPassword;
+        _computeFormReady: function(currentPassword, newPassword, confirmNewPassword, sendingData) {
+          var formReady = false;
+
+          if (currentPassword && newPassword && confirmNewPassword) {
+            formReady = true;
+          }
+
+          if (sendingData) {
+            formReady = false;
+          }
+
+          return formReady;
         },
         _submitForm: function(e) {
-          //   e.preventDefault();
           var form = document.getElementById('form');
-          //   console.log(form.serialize(), form.validate());
-          this._formReset();
+
+          var payload = {
+            action: 'update_password',
+            current_password: this.user.currentPassword,
+            password: this.user.newPassword,
+          };
+          console.log(payload);
+          //   this.$.ajax.body = payload;
+          //   this.$.ajax.generateRequest();
         },
         _setPassword: function() {
           alert('a redirection shall happen here!');
@@ -85,6 +111,13 @@
           this.set('user.currentPassword', null);
           this.set('user.newPassword', null);
           this.set('user.confirmNewPassword', null);
+        },
+        _ajaxRequest: function() {
+          this.set('sendingData', true);
+        },
+        _ajaxResponse: function() {
+          this.set('sendingData', false);
+          this._formReset();
         }
       });
     })();
