--- a/app/elements/register-element.html
+++ b/app/elements/register-element.html
@@ -47,10 +47,12 @@
         <iron-form id="form" method="post" action="/register">
           <paper-input label="Name" required error-message="Please enter your name" value="{{user.name}}" autoValidate></paper-input>
           <paper-input type="email" label="Email" required error-message="Please enter your email" value="{{user.email}}" autoValidate></paper-input>
-          <paper-button disabled$="[[!_computeFormReady(user.name, user.email)]]" raised on-tap="_submitForm">Submit</paper-button>
+          <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
         </iron-form>
       </div>
     </paper-dialog>
+
+    <iron-ajax id="ajax" url="/account" method="POST" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
   </template>
 
   <script>
@@ -68,6 +70,14 @@
               email: null
             },
             notify: true
+          },
+          sendingData: {
+            type: Boolean,
+            value: false
+          },
+          formReady: {
+            type: Boolean,
+            computed: '_computeFormReady(user.name, user.email, sendingData)'
           }
         },
         listeners: {
@@ -76,8 +86,18 @@
         ready: function() {
 
         },
-        _computeFormReady: function(name, email) {
-          return name && email;
+        _computeFormReady: function(name, email, sendingData) {
+          var formReady = false;
+
+          if (name && email) {
+            formReady = true;
+          }
+
+          if (sendingData) {
+            formReady = false;
+          }
+
+          return formReady;
         },
         _openRegisterModal: function(e) {
           this.$.registerModal.open();
@@ -86,10 +106,7 @@
           this.$.registerModal.close();
         },
         _submitForm: function(e) {
-          //   e.preventDefault();
           var form = document.getElementById('form');
-          console.log(Polymer.dom(e).localTarget.parentElement.validate());
-          //   console.log(form.serialize(), form.validate());
         },
         _modalClosed: function() {
           this._formReset();
@@ -97,6 +114,13 @@
         _formReset: function() {
           this.set('user.name', null);
           this.set('user.email', null);
+        },
+        _ajaxRequest: function() {
+          this.set('sendingData', true);
+        },
+        _ajaxResponse: function() {
+          this.set('sendingData', false);
+          this._formReset();
         }
       });
     })();
