--- a/app/elements/register-element.html
+++ b/app/elements/register-element.html
@@ -28,6 +28,18 @@
         display: block;
         margin: 20px 0 0;
       }
+
+      paper-dialog paper-button {
+        margin: 20px 0 0;
+        background-color: #3f51b5;
+        color: #fff;
+      }
+
+      paper-dialog paper-button[disabled] {
+        background-color: #ccc;
+        color: #fff;
+        cursor: not-allowed;
+      }
     </style>
 
     <paper-card heading="Register">
