fix subscriptions items

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -67,4 +67,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="billing-element.html">
 <link rel="import" href="plan-element.html">
 <link rel="import" href="feedback-element.html">
+<link rel="import" href="subscriptions-element.html">
+<link rel="import" href="subscription-element.html">
 <link rel="import" href="users.html">
