--- a/app/elements/plan-element.html
+++ b/app/elements/plan-element.html
@@ -39,8 +39,18 @@
         <h4>[[plan.title]]</h4>
         <hr>
         <p>[[priceText]]</p>
-        <p>[[plan.description]]</p>
-        <paper-button raised on-tap="_selectPlan" plan="[[plan]]">Select</paper-button>
+        <p>[[descriptionText]]</p>
+        <template is="dom-if" if="[[plan.promo]]">
+          <p>[[plan.promo.description]]</p>
+        </template>
+
+        <template is="dom-if" if="[[expirationDate]]">
+          <p>expires on [[expirationDate]]</p>
+        </template>
+
+        <template is="dom-if" if="[[plan.promo.notUsed]]">
+          <paper-button raised on-tap="_selectPlan" plan="[[plan]]">Select</paper-button>
+        </template>
       </div>
     </paper-card>
   </template>
@@ -60,6 +70,10 @@
             type: String,
             computed: '_computePriceText(plan.price)'
           },
+          descriptionText: {
+            type: String,
+            computed: '_computeDescriptionText(plan.description, plan.machine_limit)'
+          },
           discountedPriceText: {
             type: String,
             computed: '_computeDiscountedPriceText(plan.promo)'
@@ -74,6 +88,9 @@
         },
         _computePriceText: function(price) {
           return price != null ? '$' + price + '/month' : '';
+        },
+        _computeDescriptionText: function(description, machineLimit) {
+          return description ? description : machineLimit + ' monitored servers';
         },
         _computeDiscountedPriceText: function(promo) {
           if (promo) {
@@ -92,6 +109,9 @@
         _selectPlan: function(e) {
           var plan = e.currentTarget.plan;
           console.log(plan);
+        },
+        _triggerInfo: function() {
+          console.log('info popup');
         }
       });
     })();
