--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -17,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
+<link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
 
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
@@ -69,4 +70,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="feedback-element.html">
 <link rel="import" href="subscriptions-element.html">
 <link rel="import" href="subscription-element.html">
+<link rel="import" href="sessions-element.html">
+<link rel="import" href="session-element.html">
 <link rel="import" href="users.html">
