add tokens list

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -72,4 +72,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="subscription-element.html">
 <link rel="import" href="sessions-element.html">
 <link rel="import" href="session-element.html">
+<link rel="import" href="tokens-element.html">
+<link rel="import" href="token-element.html">
 <link rel="import" href="users.html">
