--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -94,6 +94,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'sessions';
     });
 
+    page('/tokens', function() {
+      app.route = 'tokens';
+    });
+
     // 404
     page('*', function() {
       app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
