--- a/app/elements/token-element.html
+++ b/app/elements/token-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="session-element">
+<dom-module id="token-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -38,13 +38,13 @@
       }
     </style>
 
-    <paper-item on-tap="_expandSession" class$="info-item flex-horizontal-with-ratios session-item [[indexClass]]">
-      <div class="flexchild">[[createdTimeText]]</div>
+    <paper-item on-tap="_expandToken" class$="info-item flex-horizontal-with-ratios token-item [[indexClass]]">
+      <div class="flexchild">[[token.name]]</div>
       <div class="flexchild">[[accessedTimeText]]</div>
       <div class="flexchild">
-        <span class="session-active" hidden$="[[!isActive]]">Current Session</span>
-        <span class="session-action" hidden$="[[isActive]]">
-          <paper-button disabled$="[[deletingSession]]" class="revoke" raised on-tap="_revokeSession">Terminate</paper-button>
+        <span class="token-active" hidden$="[[!isActive]]">Current Token</span>
+        <span class="token-action" hidden$="[[isActive]]">
+          <paper-button disabled$="[[deletingToken]]" class="revoke" raised on-tap="_revokeToken">Revoke</paper-button>
         </span>
       </div>
       <div class="flexchild text-right">
@@ -55,19 +55,31 @@
     <iron-collapse class="sub-items" id="collapse">
       <div class="info-item flex-horizontal-with-ratios">
         <div class="flexchild">ID</div>
-        <div class="flexchild">[[session.id]]</div>
+        <div class="flexchild">[[token.id]]</div>
+      </div>
+      <div class="info-item flex-horizontal-with-ratios">
+        <div class="flexchild">Value</div>
+        <div class="flexchild">[[token.token]]</div>
+      </div>
+      <div class="info-item flex-horizontal-with-ratios">
+        <div class="flexchild">TTL</div>
+        <div class="flexchild">[[token.ttl]]</div>
       </div>
       <div class="info-item flex-horizontal-with-ratios">
         <div class="flexchild">IP Address</div>
-        <div class="flexchild">[[session.ip_address]]</div>
+        <div class="flexchild">[[token.ip_address]]</div>
       </div>
       <div class="info-item flex-horizontal-with-ratios">
         <div class="flexchild">User Agent</div>
-        <div class="flexchild">[[session.user_agent]]</div>
+        <div class="flexchild">[[token.user_agent]]</div>
+      </div>
+      <div class="info-item flex-horizontal-with-ratios">
+        <div class="flexchild">Created At</div>
+        <div class="flexchild">[[createdTimeText]]</div>
       </div>
     </iron-collapse>
 
-    <iron-ajax id="revokeSessionAjax" url="/sessions/[[session.id]]" method="DELETE" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
+    <iron-ajax id="revokeTokenAjax" url="/tokens/[[token.id]]" method="DELETE" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
   </template>
 
   <script>
@@ -75,10 +87,10 @@
       'use strict';
 
       Polymer({
-        is: 'session-element',
+        is: 'token-element',
 
         properties: {
-          session: {
+          token: {
             type: Object
           },
           index: {
@@ -93,21 +105,21 @@
           },
           createdTimeText: {
             type: String,
-            computed: '_computeCreatedTimeText(session.created_at)'
+            computed: '_computeCreatedTimeText(token.created_at)'
           },
           accessedTimeText: {
             type: String,
-            computed: '_computeAccessedTimeText(session.last_accessed_at)'
+            computed: '_computeAccessedTimeText(token.last_accessed_at)'
           },
           isActive: {
             type: Boolean,
-            computed: '_computeIsActive(session.active)'
+            computed: '_computeIsActive(token.active)'
           },
           isOpen: {
             type: Boolean,
             value: false
           },
-          deletingSession: {
+          deletingToken: {
             type: Boolean,
             value: false
           }
@@ -131,20 +143,20 @@
         _computeIsActive: function(active) {
           return active == true;
         },
-        _expandSession: function(e) {
+        _expandToken: function(e) {
           this.$.collapse.toggle();
           this.set('isOpen', !this.isOpen);
         },
-        _revokeSession: function(e) {
+        _revokeToken: function(e) {
           e.stopPropagation();
-          //   this.$.revokeSessionAjax.generateRequest();
+          //   this.$.revokeTokenAjax.generateRequest();
         },
         _ajaxRequest: function(e) {
           this.set('sendingData', true);
         },
         _ajaxResponse: function(e) {
-          this.fire('revokeSession', {
-            session: this.session
+          this.fire('revokeToken', {
+            token: this.token
           });
           this.set('sendingData', false);
         }
